--- a/contacto/index.html
+++ b/contacto/index.html
@@ -37,6 +37,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/images/favic/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/images/favic/favicon-16x16.png">
   <link rel="manifest" href="/images/favic/site.webmanifest">
+  <link rel="icon" href="/favicon.ico">
 
   <!-- Schema: LocalBusiness / Restaurant -->
   <script type="application/ld+json">
