--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <meta property="og:image:alt" content="Ceviche de Sazón con Limón en Puerto Varas" />
 
   <link rel="icon" href="/images/favic/logo.webp" />
-  <link rel="stylesheet" href="/css/styles.css?v=1.1" />
+  <link rel="stylesheet" href="/css/styles.css?v=1.2" />
 
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="/images/favic/apple-touch-icon.png">
@@ -297,10 +297,15 @@
                 <h3>Ceviche de salmón <span class="muted">(500 g)</span></h3>
                 <div class="price">$ 10.000</div>
               </div>
-              <p class="muted">Salmón premium Aqua marinado en leche de tigre (según disponibilidad).</p>
+              <p class="muted" style="margin-bottom: 8px;">Salmón premium Aqua marinado en leche de tigre (según
+                disponibilidad).</p>
+              <a class="muted"
+                style="font-size: 14px; font-weight: 600; text-decoration: underline; transition: color 0.2s;"
+                onmouseover="this.style.color='var(--text)'" onmouseout="this.style.color='var(--muted)'"
+                href="/ceviche-de-salmon-puerto-varas/">Ver detalles</a>
               <div class="card__foot">
                 <span class="tag">Más vendido</span>
-                <a class="link"
+                <a class="btn btn--primary btn--sm"
                   href="https://wa.me/56948552174?text=Hola,%20quiero%20Ceviche%20de%20salm%C3%B3n%20(500%20g).%20%C2%BFDelivery%20o%20retiro%3F"
                   target="_blank" rel="noopener">Pedir</a>
               </div>
@@ -317,10 +322,15 @@
                 <h3>Ceviche salmón camarón <span class="muted">(500 g)</span></h3>
                 <div class="price">$ 11.500</div>
               </div>
-              <p class="muted">Salmón premium Aqua con camarones, marinado en leche de tigre.</p>
+              <p class="muted" style="margin-bottom: 8px;">Salmón premium Aqua con camarones, marinado en leche de
+                tigre.</p>
+              <a class="muted"
+                style="font-size: 14px; font-weight: 600; text-decoration: underline; transition: color 0.2s;"
+                onmouseover="this.style.color='var(--text)'" onmouseout="this.style.color='var(--muted)'"
+                href="/ceviche-salmon-camaron-puerto-varas/">Ver detalles</a>
               <div class="card__foot">
                 <span class="tag">Favorito</span>
-                <a class="link"
+                <a class="btn btn--primary btn--sm"
                   href="https://wa.me/56948552174?text=Hola,%20quiero%20Ceviche%20salm%C3%B3n%20camar%C3%B3n%20(500%20g).%20%C2%BFDelivery%20o%20retiro%3F"
                   target="_blank" rel="noopener">Pedir</a>
               </div>
@@ -333,15 +343,20 @@
             </div>
             <div class="card__body">
               <div class="card__top">
-                <h3>Tártaro posta negra <span class="muted">(300 g)</span></h3>
+                <h3>Crudo posta negra <span class="muted">(300 g)</span></h3>
                 <div class="price">$ 12.500</div>
               </div>
-              <p class="muted">Cebolla morada, ají verde, pepinillo dill, pimentón rojo, cilantro y nuestra salsa
+              <p class="muted" style="margin-bottom: 8px;">Cebolla morada, ají verde, pepinillo dill, pimentón rojo,
+                cilantro y nuestra salsa
                 secreta.
               </p>
+              <a class="muted"
+                style="font-size: 14px; font-weight: 600; text-decoration: underline; transition: color 0.2s;"
+                onmouseover="this.style.color='var(--text)'" onmouseout="this.style.color='var(--muted)'"
+                href="/crudos-puerto-varas/">Ver detalles</a>
               <div class="card__foot">
                 <span class="tag">Crudos</span>
-                <a class="link"
+                <a class="btn btn--primary btn--sm"
                   href="https://wa.me/56948552174?text=Hola,%20quiero%20T%C3%A1rtaro%20posta%20negra%20(300%20g).%20%C2%BFDelivery%20o%20retiro%3F"
                   target="_blank" rel="noopener">Pedir</a>
               </div>
@@ -501,7 +516,7 @@
     </svg>
   </a>
 
-  <script src="/js/main.js?v=1.1"></script>
+  <script src="/js/main.js?v=1.2"></script>
 </body>
 
 </html>
