--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
     <section class="section">
       <div class="wrap">
         <div class="section__head">
-          <h2>Más vendidos</h2>
+          <h2>Nuestros Productos Más Vendidos</h2>
           <p>Los favoritos (500g aprox). Pide directo por WhatsApp para confirmar disponibilidad.</p>
         </div>
 
