--- a/menu/index.html
+++ b/menu/index.html
@@ -65,19 +65,19 @@
             {
               "@type":"MenuItem",
               "name":"Ceviche de salmón (500gr)",
-              "description":"Salmón premium Aqua marinado en leche de tigre.",
+              "description":"Salmón premium marinado en leche de tigre.",
               "offers":{"@type":"Offer","price":"10000","priceCurrency":"CLP","availability":"https://schema.org/InStock"}
             },
             {
               "@type":"MenuItem",
               "name":"Ceviche salmón palta (500gr)",
-              "description":"Salmón premium Aqua y palta, marinado en leche de tigre.",
+              "description":"Salmón premium y palta, marinado en leche de tigre.",
               "offers":{"@type":"Offer","price":"11000","priceCurrency":"CLP","availability":"https://schema.org/InStock"}
             },
             {
               "@type":"MenuItem",
               "name":"Ceviche salmón camarón (500g)",
-              "description":"Salmón premium Aqua con camarones, marinado en leche de tigre.",
+              "description":"Salmón premium con camarones, marinado en leche de tigre.",
               "offers":{"@type":"Offer","price":"11500","priceCurrency":"CLP","availability":"https://schema.org/InStock"}
             },
             {
@@ -191,10 +191,10 @@
           </div>
 
           <div class="menuList" id="menuList">
-            <article class="menuItem" data-name="ceviche de salmon 500 g salmon premium aqua leche de tigre">
+            <article class="menuItem" data-name="ceviche de salmon 500 g salmon premium leche de tigre">
               <div class="menuItem__main">
                 <h3 class="menuItem__title">Ceviche de salmón <span class="muted">(500 g)</span></h3>
-                <p class="menuItem__desc">Salmón premium Aqua marinado en nuestra leche de tigre.</p>
+                <p class="menuItem__desc">Salmón premium marinado en nuestra leche de tigre.</p>
                 <div class="menuItem__meta">
                   <span class="pillLite">Más vendido</span>
                   <span class="pillLite">Fresco</span>
@@ -208,10 +208,10 @@
               </div>
             </article>
 
-            <article class="menuItem" data-name="ceviche salmon palta 500 g salmon premium aqua palta leche de tigre">
+            <article class="menuItem" data-name="ceviche salmon palta 500 g salmon premium palta leche de tigre">
               <div class="menuItem__main">
                 <h3 class="menuItem__title">Ceviche salmón palta <span class="muted">(500 g)</span></h3>
-                <p class="menuItem__desc">Salmón premium Aqua y palta, marinado en leche de tigre.</p>
+                <p class="menuItem__desc">Salmón premium y palta, marinado en leche de tigre.</p>
                 <div class="menuItem__meta">
                   <span class="pillLite">Top</span>
                   <span class="pillLite">Cremoso</span>
@@ -225,11 +225,10 @@
               </div>
             </article>
 
-            <article class="menuItem"
-              data-name="ceviche salmon camaron 500 g salmon premium aqua camaron leche de tigre">
+            <article class="menuItem" data-name="ceviche salmon camaron 500 g salmon premium camaron leche de tigre">
               <div class="menuItem__main">
                 <h3 class="menuItem__title">Ceviche salmón camarón <span class="muted">(500 g)</span></h3>
-                <p class="menuItem__desc">Salmón premium Aqua con camarones, marinado en leche de tigre.</p>
+                <p class="menuItem__desc">Salmón premium con camarones, marinado en leche de tigre.</p>
                 <div class="menuItem__meta">
                   <span class="pillLite">Favorito</span>
                   <span class="pillLite">Intenso</span>
