--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                 <h3>Ceviche de salmón <span class="muted">(500 g)</span></h3>
                 <div class="price">$ 10.000</div>
               </div>
-              <p class="muted" style="margin-bottom: 8px;">Salmón premium Aqua marinado en leche de tigre (según
+              <p class="muted" style="margin-bottom: 8px;">Salmón premium marinado en leche de tigre (según
                 disponibilidad).</p>
               <a class="muted"
                 style="font-size: 14px; font-weight: 600; text-decoration: underline; transition: color 0.2s;"
@@ -322,7 +322,7 @@
                 <h3>Ceviche salmón camarón <span class="muted">(500 g)</span></h3>
                 <div class="price">$ 11.500</div>
               </div>
-              <p class="muted" style="margin-bottom: 8px;">Salmón premium Aqua con camarones, marinado en leche de
+              <p class="muted" style="margin-bottom: 8px;">Salmón premium con camarones, marinado en leche de
                 tigre.</p>
               <a class="muted"
                 style="font-size: 14px; font-weight: 600; text-decoration: underline; transition: color 0.2s;"
