--- a/index.html
+++ b/index.html
@@ -218,8 +218,9 @@
             Un ceviche que no olvidarás.
           </h2>
           <p class="muted story__lead" style="font-size: 1.125rem;">
-            Olvídate del ceviche genérico. Nuestra leche de tigre exclusiva y aliños de autor te dejarán pidiendo más.
-            Frescura real, diseñada para paladares exigentes en Puerto Varas.
+            OlvíPreparamos nuestro ceviche en el momento, con una receta propia de leche de tigre que marca la
+            diferencia. Puro sabor fusión, hecho con ingredientes frescos para quienes buscan calidad en
+            Puerto Varas.
           </p>
 
           <div class="story__bullets">
@@ -227,7 +228,8 @@
               <span class="story__icon">🍋</span>
               <div>
                 <strong>Sabor adictivo</strong>
-                <p class="muted">Receta peruana-fusión con el golpe exacto de limón y picante.</p>
+                <p class="muted">Receta fusión con el toque justo de limón y picante para que siempre quieras un poco
+                  más.</p>
               </div>
             </div>
 
@@ -264,7 +266,8 @@
 
           <article class="card storyCard">
             <h3>Crudo Sureño Premium</h3>
-            <p class="muted">Posta negra + salsa secreta. Un clásico del sur elevado a otro nivel.</p>
+            <p class="muted">Posta negra fresca, con cebolla morada, ají verde, pepinillo dill, pimentón rojo,
+              cilantro y nuestra salsa secreta. Un clásico de la zona, hecho como corresponde.</p>
           </article>
 
           <article class="card card--cta storyCard storyCard--cta"
@@ -426,9 +429,10 @@
 
           <details class="faq__item">
             <summary>¿Y cuál es el secreto de su famosa leche de tigre?</summary>
-            <p>¡Ahhh! Ese es <strong>nuestro secreto mejor guardado</strong>. Te lo podríamos contar... pero luego
-              tendríamos que prepararte un ceviche gratis 😅. Lo único que te diremos es que es el equilibrio perfecto
-              entre <strong>limones frescos de pica</strong>, acidez calculada y un toque que te hará querer tomártela a
+            <p>¡Ahhh! Ese es <strong>nuestro secreto mejor guardado</strong>. Solo te diremos que es el equilibrio
+              perfecto
+              entre <strong>limones de pica frescos</strong>, acidez calculada y un toque que te dará ganas de querer
+              tomártela a
               cucharadas.</p>
           </details>
 
