--- a/ceviche-de-salmon-puerto-varas/index.html
+++ b/ceviche-de-salmon-puerto-varas/index.html
@@ -30,15 +30,15 @@
         content="https://sazonconlimon.cl/images/ceviche-salmon-sazonconlimon-puerto-varas.webp" />
     <meta property="og:image:alt" content="Ceviche de salmón de Sazón con Limón en Puerto Varas" />
 
-    <link rel="icon" href="/images/favic/logo.webp" />
     <link rel="stylesheet" href="/css/styles.css?v=1.2" />
 
     <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/favic/apple-touch-icon.png">
+    <link rel="icon" href="/favicon.ico" sizes="any">
+    <link rel="icon" type="image/png" sizes="48x48" href="/images/favic/favicon-48x48.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/images/favic/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/images/favic/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/favic/apple-touch-icon.png">
     <link rel="manifest" href="/images/favic/site.webmanifest">
-    <link rel="icon" href="/favicon.ico">
 
     <!-- Schema: WebPage -->
     <script type="application/ld+json">
@@ -66,15 +66,15 @@
         "name":"¿Hacen delivery de ceviche de salmón en Puerto Varas?",
         "acceptedAnswer":{
           "@type":"Answer",
-          "text":"Sí. Realizamos delivery dentro de Puerto Varas (según zona y horario). Escríbenos por WhatsApp para confirmar cobertura y tiempo estimado."
+          "text":"Sí, dentro de Puerto Varas (según zona y horario). Te confirmamos cobertura y tiempos al momento del pedido."
         }
       },
       {
         "@type":"Question",
-        "name":"¿Dónde es el retiro?",
+        "name":"¿Dónde retiro?",
         "acceptedAnswer":{
           "@type":"Answer",
-          "text":"Puedes retirar en San Francisco 1036, Puerto Varas. Coordinamos el horario al momento de tu pedido."
+          "text":"Retiro en San Francisco 1036, Puerto Varas. Coordinamos el horario por WhatsApp."
         }
       },
       {
@@ -95,10 +95,10 @@
       },
       {
         "@type":"Question",
-        "name":"¿Puedo pedir por PedidosYa?",
+        "name":"¿También está en PedidosYa?",
         "acceptedAnswer":{
           "@type":"Answer",
-          "text":"Sí. También puedes encontrarnos en PedidosYa, o pedir directo por WhatsApp."
+          "text":"Sí. Puedes pedir por PedidosYa o directo por WhatsApp si quieres coordinación más rápida."
         }
       }
     ]
