--- a/ceviche-salmon-camaron-puerto-varas/index.html
+++ b/ceviche-salmon-camaron-puerto-varas/index.html
@@ -30,15 +30,15 @@
         content="https://sazonconlimon.cl/images/ceviche-salmon-camaron-sazonconlimon-puerto-varas.webp" />
     <meta property="og:image:alt" content="Ceviche de salmón y camarón de Sazón con Limón en Puerto Varas" />
 
-    <link rel="icon" href="/images/favic/logo.webp" />
     <link rel="stylesheet" href="/css/styles.css?v=1.2" />
 
     <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/favic/apple-touch-icon.png">
+    <link rel="icon" href="/favicon.ico" sizes="any">
+    <link rel="icon" type="image/png" sizes="48x48" href="/images/favic/favicon-48x48.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/images/favic/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/images/favic/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/favic/apple-touch-icon.png">
     <link rel="manifest" href="/images/favic/site.webmanifest">
-    <link rel="icon" href="/favicon.ico">
 
     <!-- Schema: WebPage -->
     <script type="application/ld+json">
@@ -66,7 +66,7 @@
         "name":"¿Llevan el ceviche mixto a domicilio en Puerto Varas?",
         "acceptedAnswer":{
           "@type":"Answer",
-          "text":"Por supuesto, contamos con servicio de delivery para toda el área urbana de Puerto Varas. Solo consúltanos por tu dirección vía WhatsApp."
+          "text":"Por supuesto. Estamos activos en PedidosYa y también puedes pedir despacho directo por WhatsApp (si haces pedidos más grandes)."
         }
       },
       {
@@ -74,15 +74,15 @@
         "name":"¿Tienen punto de retiro físico?",
         "acceptedAnswer":{
           "@type":"Answer",
-          "text":"Así es, estamos ubicados en San Francisco 1036. Solo debes coordinar el horario de entrega al momento de hablar por WhatsApp."
+          "text":"Así es, preparamos tu orden y nos avisas a qué hora la pasas a buscar a San Francisco 1036."
         }
       },
       {
         "@type":"Question",
-        "name":"¿Qué ingredientes trae el ceviche de salmón y camarón?",
+        "name":"¿Qué ingredientes trae específicamente?",
         "acceptedAnswer":{
           "@type":"Answer",
-          "text":"Lleva trozos de salmón fresco, camarones, cebolla morada, cilantro, especias y es generosamente bañado en nuestra inigualable leche de tigre."
+          "text":"La base es salmón fresco, una buena cantidad de camarones, cebolla morada fina y todo cubierto con nuestra famosa leche de tigre. Formato de 500 g aprox."
         }
       },
       {
@@ -90,7 +90,7 @@
         "name":"¿Cuáles son las formas de pago?",
         "acceptedAnswer":{
           "@type":"Answer",
-          "text":"Puedes pagar con transferencia bancaria, pago en efectivo o tarjetas. También está disponible a través de la app PedidosYa."
+          "text":"Transferencia electrónica (lo más conveniente), efectivo, débito y crédito. Queremos que el proceso sea sencillo."
         }
       }
     ]
