--- a/crudos-puerto-varas/index.html
+++ b/crudos-puerto-varas/index.html
@@ -29,15 +29,15 @@
     <meta property="og:image" content="https://sazonconlimon.cl/images/crudo-premium-puerto-varas.webp" />
     <meta property="og:image:alt" content="Crudo Premium de Sazón con Limón en Puerto Varas" />
 
-    <link rel="icon" href="/images/favic/logo.webp" />
     <link rel="stylesheet" href="/css/styles.css?v=1.2" />
 
     <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/favic/apple-touch-icon.png">
+    <link rel="icon" href="/favicon.ico" sizes="any">
+    <link rel="icon" type="image/png" sizes="48x48" href="/images/favic/favicon-48x48.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/images/favic/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/images/favic/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/favic/apple-touch-icon.png">
     <link rel="manifest" href="/images/favic/site.webmanifest">
-    <link rel="icon" href="/favicon.ico">
 
     <!-- Schema: WebPage -->
     <script type="application/ld+json">
@@ -65,23 +65,15 @@
         "name":"¿Tienen delivery de crudos en Puerto Varas?",
         "acceptedAnswer":{
           "@type":"Answer",
-          "text":"Sí, entregamos crudos a domicilio a través de PedidosYa o mediante coordinación directa por WhatsApp si el despacho es factible según la zona."
+          "text":"Por supuesto. Estamos activos en PedidosYa y también puedes pedir despacho directo por WhatsApp (si haces pedidos más grandes)."
         }
       },
       {
         "@type":"Question",
-        "name":"¿De qué carne es el crudo?",
+        "name":"¿Tienen punto de retiro físico?",
         "acceptedAnswer":{
           "@type":"Answer",
-          "text":"Usamos posta negra seleccionada, un corte magro y tierno ideal para preparar el clásico crudo sureño."
-        }
-      },
-      {
-        "@type":"Question",
-        "name":"¿Qué ingredientes lleva el crudo premium?",
-        "acceptedAnswer":{
-          "@type":"Answer",
-          "text":"Lleva carne de posta negra, cebolla morada, ají verde, pepinillo, pimentón rojo, cilantro y aliño de la casa."
+          "text":"Así es, preparamos tu orden y nos avisas a qué hora la pasas a buscar a San Francisco 1036."
         }
       },
       {
@@ -89,7 +81,15 @@
         "name":"¿Se pueden cambiar los ingredientes?",
         "acceptedAnswer":{
           "@type":"Answer",
-          "text":"Los crudos ya vienen preparados con nuestra receta y aliños balanceados, por lo que no es posible quitar ni modificar ingredientes."
+          "text":"Los crudos vienen preparados desde cero con nuestra receta ya balanceada, por lo que no es posible quitar ingredientes ni personalizarlo."
+        }
+      },
+      {
+        "@type":"Question",
+        "name":"¿Cuáles son las formas de pago?",
+        "acceptedAnswer":{
+          "@type":"Answer",
+          "text":"Transferencia electrónica (lo más conveniente), efectivo, débito y crédito. Queremos que el proceso sea sencillo."
         }
       }
     ]
