--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
   <meta property="og:image" content="https://sazonconlimon.cl/images/og-sazonconlimon.jpg" />
   <meta property="og:image:alt" content="Ceviche de Sazón con Limón en Puerto Varas" />
 
-  <link rel="icon" href="/images/favic/logo.webp" />
   <link rel="stylesheet" href="/css/styles.css?v=1.2" />
 
   <!-- Favicons -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/images/favic/apple-touch-icon.png">
+  <link rel="icon" href="/favicon.ico" sizes="any">
+  <link rel="icon" type="image/png" sizes="48x48" href="/images/favic/favicon-48x48.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/images/favic/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/images/favic/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/favic/apple-touch-icon.png">
   <link rel="manifest" href="/images/favic/site.webmanifest">
-  <link rel="icon" href="/favicon.ico">
 
   <!-- Schema: Restaurant (HEAD as requested) -->
   <script type="application/ld+json">
@@ -128,10 +128,10 @@
       },
       {
         "@type":"Question",
-        "name":"¿Cuál es el secreto de su leche de tigre?",
+        "name":"¿Y cuál es el secreto de su famosa leche de tigre?",
         "acceptedAnswer":{
           "@type":"Answer",
-          "text":"¡Ahhh! Ese es nuestro secreto mejor guardado. Te lo podríamos contar... pero luego tendríamos que prepararte un ceviche gratis. Lo único que te podemos decir es que usamos limones extra jugosos de pica, toques cítricos, y el equilibrio perfecto entre acidez y frescura que hace agua la boca."
+          "text":"¡Ahhh! Ese es nuestro secreto mejor guardado. Solo te diremos que es el equilibrio perfecto entre limones de pica frescos, acidez calculada y un toque que te dará ganas de querer tomártela a cucharadas."
         }
       }
     ]
