--- a/menu/index.html
+++ b/menu/index.html
@@ -26,15 +26,15 @@
   <meta property="og:image:alt" content="Ceviche de Sazón con Limón" />
 
   <link rel="preconnect" href="https://wa.me" />
-  <link rel="icon" href="/images/favic/logo.webp" />
   <link rel="stylesheet" href="/css/styles.css?v=1.2" />
 
   <!-- Favicons -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/images/favic/apple-touch-icon.png">
+  <link rel="icon" href="/favicon.ico" sizes="any">
+  <link rel="icon" type="image/png" sizes="48x48" href="/images/favic/favicon-48x48.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/images/favic/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/images/favic/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/favic/apple-touch-icon.png">
   <link rel="manifest" href="/images/favic/site.webmanifest">
-  <link rel="icon" href="/favicon.ico">
 
   <!-- Schema: Restaurant + Menu (HEAD as requested) -->
   <script type="application/ld+json">
